src/css/main.css
:root {
    --selected-icon-bg-color: #dfdfdf;
}

body {
    position: fixed;
    margin: 0px;
    height: calc(var(--vh, 1vh) * 100);
    width: 100%;
    overflow: hidden;
    font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica,
        Arial, sans-serif;
}

#whiteboardContainer {
    height: calc(var(--vh, 1vh) * 100);
    width: 100%;
}

.btn-group button {
    background: transparent;
    border: 1px solid transparent;
    color: #3b3b3a;
    padding: 11px;
    /* Some padding */
    cursor: pointer;
    /* Pointer/hand icon */
    float: left;
    /* Float the buttons side by side */
}

@media (max-device-width: 1024px) {
    .btn-group button {
        font-size: 2.4em;
        height: 88px;
        width: 88px;
    }

    .minGroup {
        width: 50px;
    }
}

@media (min-device-width: 1024px) {
    .btn-group button {
        font-size: 1.2em;
        height: 44px;
        width: 44px;
    }

    .minGroup {
        width: 25px;
    }
}

button::-moz-focus-inner {
    border: 0;
}

.whiteboard-edit-group.group-disabled {
    background: repeating-linear-gradient(
        45deg,
        rgba(255, 166, 0, 0.366),
        rgba(255, 166, 0, 0.366) 10px,
        rgba(255, 166, 0, 0.666) 10px,
        rgba(255, 166, 0, 0.666) 20px
    );
}

/*
 * Deactivate all pointer events on all the children
 * of a group when it's disabled.
 */
.whiteboard-edit-group.group-disabled > * {
    pointer-events: none;
}

/* Clear floats (clearfix hack) */

.btn-group:after {
    content: "";
    clear: both;
    display: table;
}

/* Add a background color on hover */

.btn-group button:hover {
    background: #eeeeee;
    color: #000000;
}

button {
    outline-width: 0;
}

.btn-group {
    background-color: #80808060;
    margin-left: 5px;
    margin-bottom: 5px;
    float: left;
    position: relative;
    border: 1px solid #444444;
}

.whiteboard-tool.active:not(:disabled) {
    background: var(--selected-icon-bg-color);
    border: 1px solid #444444;
}

#whiteboardThicknessSlider {
    -webkit-appearance: none;
    width: 100%;
    height: 10px;
    border-radius: 3px;
    background: transparent;
    outline: none;
    opacity: 1;
    -webkit-transition: opacity 0.15s ease-in-out;
    transition: opacity 0.15s ease-in-out;
}

.textBox.active {
    border: 1px dashed gray;
}

.textBox > .removeIcon,
.textBox > .moveIcon {
    display: none;
}

.textBox.active > .removeIcon,
.textBox.active > .moveIcon {
    display: block;
}

.stickyNote {
    width: 200px;
    height: 200px;
    box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
    overflow-y: auto;
}

.modalBtn {
    padding: 5px;
    border-radius: 5px;
    border: 0px;
    min-width: 50px;
    cursor: pointer;
}

#displayWhiteboardInfoBtn.active {
    background: var(--selected-icon-bg-color);
}

#whiteboardInfoContainer {
    position: absolute;
    bottom: 10px;
    right: 10px;
}

.displayNone {
    display: none;
}

#shareWhiteboardDialog {
    width: 100vw;
    height: 100vh;
    background-color: rgba(1, 1, 1, 0.35);
    z-index: 10000000000000;
    position: absolute;
    top: 0;
    left: 0;
}

#shareWhiteboardDialogMessage {
    background-color: lightgreen;
    padding: 20px;
    font-weight: bold;
}

.shareWhiteboardDialogContent {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    height: 100%;
}

.shareWhiteboardDialogItem {
    padding: 5px;
    margin: 5px;
}

.picker_wrapper .picker_palette {
    width: 100%;
    order: 1;
    display: flex;
    margin-top: 0;
    margin-bottom: 0;
    flex-wrap: wrap;
}

.picker_wrapper .picker_splotch {
    /*flex:1;*/
    width: 17px;
    height: 19px;
    margin: 4px 4px;
    box-shadow: 0 0 0 1px silver;
    border: 2px solid transparent;
}

.picker_wrapper .picker_splotch:hover {
    border: 2px solid black;
}

.picker_wrapper .picker_splotch.picker_splotch_active {
    border: 2px dotted yellow;
}

